# devops-manager

./: .gitignore  CLAUDE.md  PERF_DIAGNOSIS.md  README.md  compile.bat  compile.sh  install.bat  install.sh  installer.iss  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_compiled.bat  run_compiled.sh
.atl/: skill-registry.md
.github/workflows/: build-and-sign.yml
application/services/: project_analyzer.py
application/use_cases/: manage_services_use_case.py
config/: ui_theme.yml
config/repo_types/: angular.yml  docker-infra.yml  maven-lib.yml  nx-workspace.yml  react.yml  spring-boot.yml
config/translations/: en_EN.yml  es_ES.yml
core/: __init__.py  config_manager.py  db_manager.py  git_manager.py  i18n.py  instance_manager.py  java_manager.py  logger.py  profile_manager.py  repo_detector.py  service_launcher.py
domain/: exceptions.py
domain/models/: repo_info.py  running_service.py
domain/ports/: event_bus.py
gui/: __init__.py  _perf_probe.py  app.py  app_profile.py  constants.py  dialogs.py  global_panel.py  log_helpers.py  log_panel.py  repo_card.py  theme.py  tooltip.py
gui/dialogs/: __init__.py  _base.py  clone.py  config_editor.py  confirm_close.py  docker_compose.py  instance_conflict.py  merge_branch.py  messagebox.py  profile.py  repo_config_manager.py  settings.py  workspace_groups.py
gui/repo_card/: __init__.py  _actions.py  _base.py  _config.py  _docker.py  _expand_panel.py  _git.py  (+2 more)
scripts/: build-installer.bat  compile.bat  compile.sh  install.bat  install.sh  run.bat  run.sh  run_compiled.bat  run_compiled.sh
(+18 files in other folders)
